--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -24,6 +24,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.example.myapplication'
 }
 
 dependencies {
