--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -22,6 +22,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.example.myapplication'
 }
 
 dependencies {
