--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -19,8 +19,8 @@ android {
         }
     }
     compileOptions {
-        targetCompatibility JavaVersion.VERSION_11
-        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
     namespace 'com.example.myapplication'
     buildToolsVersion '33.0.1'
